examples/httpbin/httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin
spec:
  rules:
  - host: httpbin.sloth.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 8000
